@@ -10,5 +10,11 @@ class Test_get_entity(unittest.TestCase):
     def test_good_entity(self):
         self.assertIs(CTi.get_entity('int'), int)
 
+class Py2Test(unittest.TestCase):
+    def test_paramtuple_float(self):
+        # 18539: (a,b) becomes '.0' in code object; change that but not float
+        def f((a,b), c=0.0): pass
+        self.assertEqual(ct.get_arg_text(f), '(<tuple>, c=0.0)')
+
 if __name__ == '__main__':
     unittest.main(verbosity=2, exit=False)
